assets/scss/_header.scss
.navigation {
    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 100%);
    nav a,
    nav button {
        color: white;
    }

    .level_0 {
        @apply hidden;
    }

    .level_0.header-active {
        @apply flex fixed h-full w-screen bg-white top-0 left-0 p-5;

        ol a {
            @apply text-black-ascent text-3xl;
            &:hover {
                @apply text-green-light-ascent;
            }
        }

    }

    &.is-sticky {
        background: var(--green-ascent);
    }
}

